<?xml version="1.0"?>
<package>
  <name>monstertruck_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The monstertruck_gazebo_plugins package</description>

  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_gazebo_plugins</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>monstertruck_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>monstertruck_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>